# PyPardot4

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  config.py  pyproject.toml  requirements_dev.txt  setup.py
demo/: __init__.py
demo/auth_demo/: README.md  __init__.py  oauth_demo.py  pardot_demo.ini
pypardot/: auth_handler.py  auth_pardot_api.py  client.py  errors.py
pypardot/objects/: __init__.py  accounts.py  campaigns.py  customfields.py  customredirects.py  dynamiccontent.py  emailclicks.py  emails.py  emailtemplates.py  forms.py  importapi.py  lifecyclehistories.py  lifecyclestages.py  listmemberships.py  lists.py  opportunities.py  prospectaccounts.py  prospects.py  tagobjects.py  tags.py  users.py  visitoractivities.py  visitors.py  visits.py
pypardot/objects/tests/: .gitignore  README.md  config.py.example  test_api.py  test_base.py  test_generic_ops.py  test_list_memberships.py  test_lists.py  test_prospects.py  test_read.py
pypardot/objects_v3/: __init__.py  accounts.py  campaigns.py  emails.py  importapi.py  lists.py  opportunities.py  prospects.py  users.py  visitoractivities.py  visitors.py  visits.py
pypardot/objects_v3/tests/: README.md  __init__.py  config.py.example  test_importapi.py  test_prospects.py
tests/: install_test.sh
